--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*.html</url-pattern>
+        <!--url-pattern>*.html</url-pattern-->
         <url-pattern>*.xml</url-pattern>
         <url-pattern>*.json</url-pattern>
     </servlet-mapping>
