Heart rate's scheme and adding form implementation

--- a/pom.xml
+++ b/pom.xml
@@ -104,5 +104,10 @@
             <artifactId>extjs</artifactId>
             <version>6.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.9</version>
+        </dependency>
     </dependencies>
 </project>
