--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,31 +1,33 @@
 <web-app>
+
     <display-name>Archetype Created Web Application</display-name>
 
-    <!--<servlet>
+    <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-    </servlet>-->
+    </servlet>
 
-    <!--<servlet-mapping>
+    <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.do</url-pattern>
         <url-pattern>*.xml</url-pattern>
         <url-pattern>*.json</url-pattern>
-    </servlet-mapping>-->
-    <!--<context-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
-    </context-param>-->
+    </servlet-mapping>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+    </context-param>
 
     <context-param>
         <param-name>spring.profiles.active</param-name>
-        <param-value>oracle</param-value>
+        <param-value>MySQL</param-value>
     </context-param>
 
-    <!--<listener>
+    <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
-    </listener>-->
+    </listener>
 </web-app>
