Added liquibase in project and script which adds changes which where added after initial script.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.mvc.view.suffix: .jsp
 openWhetherMapUrl=http://api.openweathermap.org/data/2.5/forecast?id=703448&appid=41a379bb03ac781ec6c814b80f49c0b4
 #openWhetherMapUrl=http://samples.openweathermap.org/data/2.5/forecast?id=524901&appid=b6907d289e10d714a6e88b30761fae22
 WhetherDataPullerDelay=0 0 * ? * *
+
+#liquibase config
+liquibase.enabled=false
