Changed database url in hibernate and liquibase properties

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,4 @@
 changeLogFile=db/liquibase-changelog.xml
-driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521/xe
+url=jdbc:oracle:thin:@localhost:1521/orcl
 username=heart_rate
 password=heart_rate1
