updated password of oracle database in hibernate and liquibase properties.

--- a/src/main/resources/oracle.properties
+++ b/src/main/resources/oracle.properties
@@ -2,7 +2,7 @@
 datasource.driver=oracle.jdbc.driver.OracleDriver
 datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
 datasource.username=heart_rate
-datasource.password=heart_rate1
+datasource.password=heart_rate
 
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.OracleDialect
