--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
 changeLogFile=db/liquibase-changelog.xml
 url=jdbc:oracle:thin:@localhost:1521/orcl
 username=heart_rate
-password=heart_rate1
+password=heart_rate
