--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
+spring.profiles.active=oracle
+
 #WhetherDataPuller settings
 openWhetherMapUrl=http://api.openweathermap.org/data/2.5/forecast?id=703448&appid=41a379bb03ac781ec6c814b80f49c0b4
 #openWhetherMapUrl=http://samples.openweathermap.org/data/2.5/forecast?id=524901&appid=b6907d289e10d714a6e88b30761fae22
