Implemented panel for representing weather state.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.mvc.view.suffix: .jsp
 spring.profiles.active=oracle
 
 #WhetherDataPuller settings
-openWhetherMapUrl=http://api.openweathermap.org/data/2.5/forecast?id=703448&appid=41a379bb03ac781ec6c814b80f49c0b4
+openWeatherMapUrl=http://api.openweathermap.org/data/2.5/forecast?id=703448&appid=41a379bb03ac781ec6c814b80f49c0b4
+currentWeatherUrl=http://api.openweathermap.org/data/2.5/weather?id=703448&appid=41a379bb03ac781ec6c814b80f49c0b4&units=metric
+
 #openWhetherMapUrl=http://samples.openweathermap.org/data/2.5/forecast?id=524901&appid=b6907d289e10d714a6e88b30761fae22
 whetherDataPullerDelay=0 0 * ? * *
 
