--- a/src/main/resources/oracle.properties
+++ b/src/main/resources/oracle.properties
@@ -7,3 +7,4 @@ datasource.password=heart_rate
 #Hibernate
 hibernate.dialect=org.hibernate.dialect.OracleDialect
 hibernate.hbm2ddl.auto=validate
+hibernate.show_sql=true
