--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>heart_rate</groupId>
     <artifactId>heart_rate</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
+
     <name>heart_rate Maven Webapp</name>
+
     <url>http://maven.apache.org</url>
 
     <repositories>
@@ -17,7 +21,8 @@
     </repositories>
 
     <properties>
-        <spring.version>4.3.9.RELEASE</spring.version>
+        <spring.fox.swagger2.version>2.9.2</spring.fox.swagger2.version>
+        <spring.version>4.3.30.RELEASE</spring.version>
         <spring.security.version>4.2.4.RELEASE</spring.security.version>
         <liquibase.version>3.5.3</liquibase.version>
         <log4j.version>2.11.1</log4j.version>
@@ -60,6 +65,24 @@
     </parent>
 
     <dependencies>
+        <!-- Swagger begin -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${spring.fox.swagger2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${spring.fox.swagger2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-data-rest</artifactId>
+            <version>${spring.fox.swagger2.version}</version>
+        </dependency>
+        <!-- Swagger end -->
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -93,6 +116,10 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>        
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
