--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>heart_rate</groupId>
     <artifactId>heart_rate</artifactId>
     <packaging>war</packaging>
-    <version>1.7.0</version>
+    <version>1.7.0-SNAPSHOT</version>
 
     <name>heart_rate Maven Webapp</name>
 
