--- a/src/main/resources/oracle.properties
+++ b/src/main/resources/oracle.properties
@@ -1,6 +1,6 @@
 # datasource
 datasource.driver=oracle.jdbc.driver.OracleDriver
-datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+datasource.url=jdbc:oracle:thin:@host.docker.internal:1521/xe
 datasource.username=heart_rate
 datasource.password=heart_rate
 
